--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
     flex-direction: column;
 }
 .btn:hover{
-    color: green;
+    color: blueviolet;
     background-color: black;
     /* width: 15px; */
 }
